# poplet

./: .env.example  .gitignore  LICENSE  Makefile  README.md  package-lock.json  package.json  setup-poplet.sh
.github/workflows/: release.yml
docs/: snipping-tool.md
packaging/arch/: PKGBUILD  poplet.desktop  poplet.install
src/: App.css  App.tsx  constants.ts  main.tsx  nav.tsx  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: App.css  capture.rs  clipboard.rs  imaging.rs  lib.rs  main.rs  shortcuts.rs  vault.rs  window.rs
src/components/: AssetsPanel.tsx  EditLauncher.tsx  EmojiPicker.tsx  ErrorBoundary.tsx  GifPicker.tsx  HintBar.tsx  NavRail.tsx  OcrPanel.tsx  SnipEditor.tsx
src/components/tabs/: HistoryTab.tsx  NotesTab.tsx  ProjectsTab.tsx  SettingsTab.tsx  VaultTab.tsx
src/db/: migrations.ts
src/hooks/: useAppSettings.ts  useBackup.ts  useDatabase.ts  useDrawingEngine.ts  useEditorSession.ts  useHistory.ts  useKeyboardNavigation.ts  useNotes.ts  useProjects.ts  useVault.ts
src/services/: editorService.ts  shortcutService.ts  snipService.ts
src/ui/: Button.tsx  Feedback.tsx  Field.tsx  Modal.tsx  Toolbar.tsx  cx.ts  index.ts  ui.css
src/utils/: paint.ts  shapeRecognition.ts  strokeGeometry.ts
